Fix: Log Pattern

--- a/src/speedog.conf
+++ b/src/speedog.conf
@@ -19,4 +19,5 @@ Monitor_Interval=1.0
 # When the LogMonitor detects 'NodeName', it sets the game speed to 'SpeedMultiplier'
 
 # Example: Speed up during combat
-Combat_Start={Combat_Start_Node, 5.0}
+Example_1={裂变链接捡垃圾_执行计划, 5.0}
+Example_2={裂变链接捡垃圾_再次作战, 1.0}
