Feat: 沙盘炼金的地图展示跳过环节

--- a/src/speedog.conf
+++ b/src/speedog.conf
@@ -21,3 +21,6 @@ Monitor_Interval=1.0
 # Example: Speed up during combat
 Example_1={裂变链接捡垃圾_执行计划, 5.0}
 Example_2={裂变链接捡垃圾_再次作战, 1.0}
+
+Sandbox_1={静默沙盘炼金_作战开始, 10.0}
+Sandbox_2={静默沙盘炼金_任务简报, 1.0}
