--- a/src/speedog.conf
+++ b/src/speedog.conf
@@ -24,3 +24,8 @@ Example_2={裂变链接捡垃圾_再次作战, 1.0}
 
 Sandbox_1={静默沙盘炼金_作战开始, 10.0}
 Sandbox_2={静默沙盘炼金_任务简报, 1.0}
+
+# 默认采用五倍速度
+DLZ_Greyzone_Flush={灰域_刷新难度, 5.0}
+# 提前在普通关卡恢复速度 (注意:炸山关卡需要在一定时间内中断代理，否则代理将跳过炸山)
+DLZ_Greyzone_Reset={灰域_普通关卡_作战中, 1.0}
