Perf: 添加彩蛋结束后的恢复原速

--- a/src/speedog.conf
+++ b/src/speedog.conf
@@ -30,3 +30,4 @@ DLZ_Greyzone_Flush={灰域_刷新难度, 3.0}
 # 提前在普通关卡恢复速度 (注意:炸山关卡需要在一定时间内中断代理，否则代理将跳过炸山)
 DLZ_Greyzone_Combat={灰域_普通关卡_作战中, 3.0}
 DLZ_Greyzone_Agent={灰域_普通关卡_代理中, 1.0}
+DLZ_Greyzone_Halloween={灰域_彩蛋_代理已完成, 1.0}
